syntax = "proto3";

package pb;

option go_package = "github.com/daniel-adam-ce/go-bank/pb";

message VerifyEmailRequest {
    int64 email = 1;
    string secret_code = 2;
}

message VerifyEmailResponse {
    bool is_verified = 1;
}

